# ur3_ros

./: README.md
ur3_rg2_moveit/: CMakeLists.txt  package (사본).xml  package.xml  testmove0.py  testmove3.py
ur3_rg2_moveit/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers (사본).yaml  ur3 (사본).srdf  ur3.srdf
ur3_rg2_moveit/gazebo/: ur3.launch
ur3_rg2_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  initialize.launch  move_group (사본).launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3_bringup.launch  ur3_moveit_controller_manager.launch.xml  ur3_upload.launch  warehouse.launch
ur3_rg2_moveit/msg/: Force_Sum.msg
ur3_rg2_moveit/urdf/: rg2.urdf.xacro  ur3_extras.urdf.xacro  ur3_rg2_arc.urdf  ur3_rg2_arc.xacro
ur3_rg2_vac_moveit/: CMakeLists.txt  package.xml  rg2.py  test_rg2.py
ur3_rg2_vac_moveit/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ur3.srdf
ur3_rg2_vac_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  ur3_bringup.launch  (+8 more)
(+23 files in other folders)
